--- a/app/src/main/res/layout/view_feed_blank.xml
+++ b/app/src/main/res/layout/view_feed_blank.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:text="ไม่มีบทความที่ต้องการค้นหา"
+        android:text="@string/post_not_found"
         android:textColor="@color/dark_gray"
         android:textSize="@dimen/default_text_size_extra_large" />
 
