--- a/app/src/main/res/layout/view_feed_item.xml
+++ b/app/src/main/res/layout/view_feed_item.xml
@@ -40,7 +40,7 @@
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:paddingTop="20dp"
-                android:text="Sample"
+                android:text="@string/sample"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/default_text_size_extra_small" />
 
@@ -51,7 +51,7 @@
                 android:background="@null"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-                android:text="Sample"
+                android:text="@string/sample"
                 android:textColor="@color/dark_gray"
                 android:textSize="@dimen/default_text_size_small" />
 
@@ -67,7 +67,7 @@
                 android:paddingRight="10dp"
                 android:paddingStart="20dp"
                 android:paddingTop="20dp"
-                android:text="Sample"
+                android:text="@string/sample"
                 android:textColor="@color/light_gray"
                 android:textSize="@dimen/default_text_size_extra_small" />
         </LinearLayout>
