Change to dimension and color resources

--- a/app/src/main/res/layout/activity_offline_post_image_preview.xml
+++ b/app/src/main/res/layout/activity_offline_post_image_preview.xml
@@ -15,11 +15,9 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_preview_close"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        style="@style/FloatingActionButton.Single"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/vector_ic_close" />
 </RelativeLayout>
