--- a/app/src/main/res/layout/view_post_content_header.xml
+++ b/app/src/main/res/layout/view_post_content_header.xml
@@ -3,10 +3,10 @@
     android:id="@+id/tv_post_content_header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:paddingBottom="5dp"
-    android:paddingTop="20dp"
+    android:layout_marginLeft="@dimen/default_margin_padding_small"
+    android:layout_marginRight="@dimen/default_margin_padding_small"
+    android:paddingBottom="@dimen/default_margin_padding_small"
+    android:paddingTop="@dimen/default_margin_padding_large"
     android:textColor="@color/text_header"
     android:textIsSelectable="true"
     android:textSize="@dimen/default_text_size"
