--- a/app/src/main/res/drawable/vector_ic_loading.xml
+++ b/app/src/main/res/drawable/vector_ic_loading.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:viewportWidth="80"
-    android:viewportHeight="80" android:width="100dp" android:height="100dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="100dp"
+    android:height="100dp"
+    android:viewportHeight="80"
+    android:viewportWidth="80">
     <path
-        android:pathData="M6 2v6h.01L6 8.01 10 12l-4 4 .01.01H6V22h12v-5.99h-.01L18 16l-4-4 4-3.99-.01-.01H18V2H6zm10 14.5V20H8v-3.5l4-4 4 4zm-4-5l-4-4V4h8v3.5l-4 4z"
-        android:fillColor="#444444" />
-    <path android:pathData="M0 0h24v24H0V0z" android:fillColor="#00FFFFFF" />
+        android:fillColor="#444444"
+        android:pathData="M6 2v6h.01L6 8.01 10 12l-4 4 .01.01H6V22h12v-5.99h-.01L18 16l-4-4 4-3.99-.01-.01H18V2H6zm10 14.5V20H8v-3.5l4-4 4 4zm-4-5l-4-4V4h8v3.5l-4 4z" />
+    <path
+        android:fillColor="#00FFFFFF"
+        android:pathData="M0 0h24v24H0V0z" />
 </vector>
