--- a/app/src/main/res/layout/activity_post_debug.xml
+++ b/app/src/main/res/layout/activity_post_debug.xml
@@ -14,7 +14,7 @@
             android:id="@+id/cb_plain_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="@dimen/default_margin_padding_small"
             android:checked="true"
             android:text="Plain Text" />
 
@@ -22,7 +22,7 @@
             android:id="@+id/cb_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="@dimen/default_margin_padding_small"
             android:checked="true"
             android:text="Header" />
 
@@ -30,7 +30,7 @@
             android:id="@+id/cb_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="@dimen/default_margin_padding_small"
             android:checked="true"
             android:text="Image" />
 
@@ -38,7 +38,7 @@
             android:id="@+id/cb_code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="@dimen/default_margin_padding_small"
             android:checked="true"
             android:text="Code" />
 
@@ -46,7 +46,7 @@
             android:id="@+id/cb_other"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="@dimen/default_margin_padding_small"
             android:checked="true"
             android:text="Other" />
 
@@ -64,6 +64,6 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:orientation="vertical"
-            android:padding="10dp" />
+            android:padding="@dimen/default_margin_padding" />
     </ScrollView>
 </LinearLayout>
