--- a/app/src/main/res/layout/activity_post_image_preview.xml
+++ b/app/src/main/res/layout/activity_post_image_preview.xml
@@ -19,21 +19,19 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom|center_horizontal"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_margin="@dimen/fab_button_margin"
         android:orientation="horizontal">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_preview_download"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginEnd="@dimen/fab_margin"
-            android:layout_marginRight="@dimen/fab_margin"
+            style="@style/FloatingActionButton"
+            android:layout_marginEnd="@dimen/fab_button_margin"
+            android:layout_marginRight="@dimen/fab_button_margin"
             app:srcCompat="@drawable/vector_ic_download" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_preview_close"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            style="@style/FloatingActionButton"
             app:srcCompat="@drawable/vector_ic_close" />
 
     </LinearLayout>
