--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -11,10 +11,10 @@
         android:id="@+id/sfv_post_search"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:background="#90000000"
+        android:layout_marginTop="@dimen/default_margin_padding_large"
+        android:background="@color/alpha_black_background"
         android:gravity="center_vertical"
         android:hint="@string/hint_search"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp" />
+        android:paddingLeft="@dimen/default_margin_padding"
+        android:paddingRight="@dimen/default_margin_padding" />
 </FrameLayout>
