--- a/app/src/main/res/layout/view_bookmark_blank.xml
+++ b/app/src/main/res/layout/view_bookmark_blank.xml
@@ -4,13 +4,13 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="@dimen/default_margin_padding">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="@dimen/default_margin_padding"
+        android:layout_marginTop="@dimen/default_margin_padding"
         android:text="@string/bookmark_not_found"
         android:textColor="@color/dark_gray"
         android:textSize="@dimen/default_text_size_large" />
