--- a/app/src/main/res/layout/view_bookmark_item.xml
+++ b/app/src/main/res/layout/view_bookmark_item.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginBottom="@dimen/default_margin_padding"
+    android:layout_marginLeft="@dimen/default_margin_padding"
+    android:layout_marginRight="@dimen/default_margin_padding"
+    android:layout_marginTop="@dimen/default_margin_padding"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="0dp"
+    app:cardCornerRadius="@dimen/card_view_corner_radius"
     app:cardPreventCornerOverlap="true">
 
     <com.balysv.materialripple.MaterialRippleLayout
@@ -26,7 +26,7 @@
             <ImageView
                 android:id="@+id/iv_bookmark_title"
                 android:layout_width="match_parent"
-                android:layout_height="190dp"
+                android:layout_height="@dimen/post_image_height"
                 android:background="@null"
                 android:contentDescription="@null"
                 android:scaleType="centerCrop" />
@@ -36,10 +36,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:paddingBottom="10dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="20dp"
+                android:paddingBottom="@dimen/default_margin_padding"
+                android:paddingLeft="@dimen/default_margin_padding_large"
+                android:paddingRight="@dimen/default_margin_padding_large"
+                android:paddingTop="@dimen/default_margin_padding_large"
                 android:text="@string/sample"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/default_text_size_extra_small" />
@@ -49,9 +49,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:paddingBottom="20dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:paddingBottom="@dimen/default_margin_padding_large"
+                android:paddingLeft="@dimen/default_margin_padding_large"
+                android:paddingRight="@dimen/default_margin_padding_large"
                 android:text="@string/sample"
                 android:textColor="@color/dark_gray"
                 android:textSize="@dimen/default_text_size_small" />
@@ -62,12 +62,12 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:gravity="right"
-                android:paddingBottom="10dp"
-                android:paddingEnd="10dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="10dp"
-                android:paddingStart="20dp"
-                android:paddingTop="20dp"
+                android:paddingBottom="@dimen/default_margin_padding"
+                android:paddingEnd="@dimen/default_margin_padding"
+                android:paddingLeft="@dimen/default_margin_padding_large"
+                android:paddingRight="@dimen/default_margin_padding"
+                android:paddingStart="@dimen/default_margin_padding_large"
+                android:paddingTop="@dimen/default_margin_padding_large"
                 android:text="@string/sample"
                 android:textColor="@color/light_gray"
                 android:textSize="@dimen/default_text_size_extra_small"
