--- a/app/src/main/res/layout/view_bottom_sheet_feed_detail.xml
+++ b/app/src/main/res/layout/view_bottom_sheet_feed_detail.xml
@@ -3,48 +3,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="@dimen/default_margin_padding_large">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="@dimen/default_margin_padding"
         android:text="ASDASDJASGD" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="@dimen/default_margin_padding"
         android:text="ASDASDJASGD" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="@dimen/default_margin_padding"
         android:text="ASDASDJASGD" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="@dimen/default_margin_padding"
         android:text="ASDASDJASGD" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="@dimen/default_margin_padding"
         android:text="ASDASDJASGD" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="@dimen/default_margin_padding"
         android:text="ASDASDJASGD" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="@dimen/default_margin_padding"
         android:text="ASDASDJASGD" />
 
 </LinearLayout>
