--- a/app/src/main/res/layout/view_feed_item_3.xml
+++ b/app/src/main/res/layout/view_feed_item_3.xml
@@ -3,21 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="5dp"
+    android:layout_marginBottom="@dimen/default_margin_padding_small"
+    android:layout_marginLeft="@dimen/default_margin_padding"
+    android:layout_marginRight="@dimen/default_margin_padding"
+    android:layout_marginTop="@dimen/default_margin_padding_small"
     app:cardBackgroundColor="@color/white">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="3dp">
+        android:padding="@dimen/default_margin_padding_extra_small">
 
         <ImageView
             android:id="@+id/iv_feed_title"
             android:layout_width="match_parent"
-            android:layout_height="190dp"
+            android:layout_height="@dimen/post_image_height"
             android:contentDescription="@null"
             android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher" />
@@ -29,7 +29,7 @@
             android:alpha="0"
             android:background="@color/alpha_dark_gray"
             android:gravity="center"
-            android:padding="20dp"
+            android:padding="@dimen/default_margin_padding_large"
             android:text="@string/sample"
             android:textColor="@color/white"
             android:textSize="@dimen/default_text_size_small" />
