--- a/app/src/main/res/layout/view_include_main_title.xml
+++ b/app/src/main/res/layout/view_include_main_title.xml
@@ -6,10 +6,10 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="190dp"
+        android:layout_height="@dimen/app_bar_layout_height"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay"
-        app:elevation="5dp"
+        app:elevation="@dimen/app_bar_layout_elevation"
         app:layout_behavior="com.akexorcist.sleepingforless.widget.FlingBehavior">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -24,20 +24,13 @@
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/tb_title"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:contentInsetEnd="0dp"
-                app:contentInsetLeft="0dp"
-                app:contentInsetRight="0dp"
-                app:contentInsetStart="0dp"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                style="@style/Toolbar" />
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="@dimen/header_logo_size"
+                android:layout_height="@dimen/header_logo_size"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="@dimen/default_margin_padding_small"
                 android:contentDescription="@null"
                 android:src="@mipmap/ic_sfl_logo" />
 
