--- a/app/src/main/res/layout/view_include_post_bookmark_loading.xml
+++ b/app/src/main/res/layout/view_include_post_bookmark_loading.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="@dimen/default_margin_padding_small"
             android:gravity="center"
             android:text="@string/bookmark_downloading"
             android:textColor="@color/white"
