--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,4 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="default_text_size_extra_extra_small">10sp</dimen>
     <dimen name="default_text_size_extra_small">12sp</dimen>
@@ -11,8 +7,28 @@
     <dimen name="default_text_size_large">20sp</dimen>
     <dimen name="default_text_size_extra_large">24sp</dimen>
 
+    <dimen name="default_margin_padding_extra_small">3dp</dimen>
+    <dimen name="default_margin_padding_small">5dp</dimen>
+    <dimen name="default_margin_padding">10dp</dimen>
+    <dimen name="default_margin_padding_large">20dp</dimen>
+    <dimen name="default_margin_padding_extra_largedefault_margin_padding_extra_large">30dp</dimen>
+
     <dimen name="default_text_size_h4">18sp</dimen>
     <dimen name="default_text_size_h3">20sp</dimen>
     <dimen name="default_text_size_h2">22sp</dimen>
     <dimen name="default_text_size_h1">24sp</dimen>
+
+    <dimen name="bottom_menu_margin">15dp</dimen>
+
+    <dimen name="app_bar_layout_elevation">5dp</dimen>
+    <dimen name="dot_progress_bar_radius">4dp</dimen>
+    <dimen name="dot_progress_bar_spacing">10dp</dimen>
+    <dimen name="card_view_corner_radius">0dp</dimen>
+    <dimen name="menu_button_icon_size">30dp</dimen>
+    <dimen name="fab_button_size">60dp</dimen>
+    <dimen name="fab_button_margin">16dp</dimen>
+    <dimen name="post_image_height">190dp</dimen>
+    <dimen name="app_bar_layout_height">190dp</dimen>
+    <dimen name="header_logo_size">100dp</dimen>
+
 </resources>
