--- a/app/src/main/res/layout/view_feed_item.xml
+++ b/app/src/main/res/layout/view_feed_item.xml
@@ -23,13 +23,30 @@
             android:background="@null"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/iv_feed_title"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/post_image_height"
-                android:background="@null"
-                android:contentDescription="@null"
-                android:scaleType="centerCrop" />
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/iv_feed_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/post_image_height"
+                    android:background="@null"
+                    android:contentDescription="@null"
+                    android:scaleType="centerCrop" />
+
+                <ImageView
+                    android:id="@+id/iv_feed_bookmark_indicator"
+                    android:layout_width="@dimen/bookmark_indicator_size"
+                    android:layout_height="@dimen/bookmark_indicator_size"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="@dimen/default_margin_padding"
+                    android:layout_marginRight="@dimen/default_margin_padding"
+                    android:contentDescription="@null"
+                    android:scaleType="fitCenter"
+                    android:src="@mipmap/ic_bookmark_indicator"
+                    android:visibility="gone" />
+            </FrameLayout>
 
             <TextView
                 android:id="@+id/tv_feed_label"
