--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,5 +30,6 @@
     <dimen name="post_image_height">190dp</dimen>
     <dimen name="app_bar_layout_height">190dp</dimen>
     <dimen name="header_logo_size">100dp</dimen>
+    <dimen name="bookmark_indicator_size">64dp</dimen>
 
 </resources>
