Handler network unavailable

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,8 @@
 
         <include layout="@layout/view_include_main_content" />
 
+        <include layout="@layout/view_include_network_unavailable" />
+
         <include layout="@layout/view_include_main_menu" />
 
     </android.support.design.widget.CoordinatorLayout>
