--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -15,6 +15,8 @@
 
         <include layout="@layout/view_include_post_content" />
 
+        <include layout="@layout/view_include_network_unavailable" />
+
         <include layout="@layout/view_include_post_menu" />
 
         <include layout="@layout/view_include_post_bookmark_loading" />
