--- a/app/src/main/res/layout/view_feed_item.xml
+++ b/app/src/main/res/layout/view_feed_item.xml
@@ -73,7 +73,7 @@
                 android:textSize="@dimen/default_text_size_small" />
 
             <TextView
-                android:id="@+id/tv_feed_published_date"
+                android:id="@+id/tv_feed_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
