--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -4,7 +4,7 @@
     android:id="@+id/bsl_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.post.PostActivity">
+    tools:context=".view.post.PostByIdActivity">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
