--- a/app/src/main/res/layout/activity_post_debug.xml
+++ b/app/src/main/res/layout/activity_post_debug.xml
@@ -56,7 +56,7 @@
         android:background="@color/light_gray"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.akexorcist.sleepingforless.view.post.PostActivity">
+        tools:context=".view.post.PostByIdActivity">
 
         <LinearLayout
             android:id="@+id/layout_post_content"
