--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,5 +31,6 @@
     <dimen name="app_bar_layout_height">190dp</dimen>
     <dimen name="header_logo_size">100dp</dimen>
     <dimen name="bookmark_indicator_size">64dp</dimen>
+    <dimen name="post_bottom_space_height">10dp</dimen>
 
 </resources>
