--- a/app/src/main/res/xml/settings_preference.xml
+++ b/app/src/main/res/xml/settings_preference.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <com.jenzz.materialpreference.PreferenceCategory
-        android:title="@string/settings_category_notification">
+    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/settings_category_notification">
 
         <com.jenzz.materialpreference.SwitchPreference
             android:defaultValue="true"
             android:key="key_push_notification"
-            android:title="@string/settings_push_notification" />
+            android:summary="@string/settings_push_notification_detail"
+            android:title="@string/settings_push_notification_title" />
     </com.jenzz.materialpreference.PreferenceCategory>
 
-    <com.jenzz.materialpreference.PreferenceCategory
-        android:title="@string/settings_category_storage">
+    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/settings_category_storage">
 
         <com.jenzz.materialpreference.Preference
             android:key="@string/settings_key_clear_app_cache"
@@ -26,8 +25,17 @@
         </com.jenzz.materialpreference.Preference>
     </com.jenzz.materialpreference.PreferenceCategory>
 
-    <com.jenzz.materialpreference.PreferenceCategory
-        android:title="@string/settings_category_other">
+    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/settings_category_other">
+
+        <com.jenzz.materialpreference.Preference
+            android:summary="@string/settings_open_source_licenses_detail"
+            android:title="@string/settings_open_source_licenses_title">
+
+            <intent
+                android:targetClass="com.akexorcist.sleepingforless.view.settings.OpenSourceLicensesActivity"
+                android:targetPackage="com.akexorcist.sleepingforless" />
+
+        </com.jenzz.materialpreference.Preference>
 
         <com.jenzz.materialpreference.Preference
             android:key="@string/settings_key_app_version"
