--- a/app/src/main/res/layout/view_bookmark_item.xml
+++ b/app/src/main/res/layout/view_bookmark_item.xml
@@ -31,6 +31,10 @@
                 android:contentDescription="@null"
                 android:scaleType="centerCrop" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/default_margin_padding_large" />
+
             <TextView
                 android:id="@+id/tv_bookmark_label"
                 android:layout_width="match_parent"
@@ -39,7 +43,6 @@
                 android:paddingBottom="@dimen/default_margin_padding"
                 android:paddingLeft="@dimen/default_margin_padding_large"
                 android:paddingRight="@dimen/default_margin_padding_large"
-                android:paddingTop="@dimen/default_margin_padding_large"
                 android:text="@string/sample"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/default_text_size_extra_small" />
