--- a/app/src/main/res/layout/view_menu_button_widget.xml
+++ b/app/src/main/res/layout/view_menu_button_widget.xml
@@ -4,7 +4,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/default_margin_padding"
+    android:paddingRight="@dimen/default_margin_padding">
 
     <ImageView
         android:id="@+id/menu_button_iv_icon"
