--- a/app/src/main/res/layout/view_include_toolbar_main_title.xml
+++ b/app/src/main/res/layout/view_include_toolbar_main_title.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/abl_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_layout_height"
         android:fitsSystemWindows="true"
