Add analytics tracking

--- a/app/src/main/res/xml/settings_preference.xml
+++ b/app/src/main/res/xml/settings_preference.xml
@@ -5,7 +5,7 @@
 
         <com.jenzz.materialpreference.SwitchPreference
             android:defaultValue="true"
-            android:key="key_push_notification"
+            android:key="@string/settings_key_push_notification"
             android:summary="@string/settings_push_notification_detail"
             android:title="@string/settings_push_notification_title" />
     </com.jenzz.materialpreference.PreferenceCategory>
@@ -28,12 +28,12 @@
     <com.jenzz.materialpreference.PreferenceCategory android:title="@string/settings_category_other">
 
         <!--<com.jenzz.materialpreference.Preference-->
-            <!--android:summary="@string/settings_open_source_licenses_detail"-->
-            <!--android:title="@string/settings_open_source_licenses_title">-->
+        <!--android:summary="@string/settings_open_source_licenses_detail"-->
+        <!--android:title="@string/settings_open_source_licenses_title">-->
 
-            <!--<intent-->
-                <!--android:targetClass="com.akexorcist.sleepingforless.view.settings.OpenSourceLicensesActivity"-->
-                <!--android:targetPackage="com.akexorcist.sleepingforless" />-->
+        <!--<intent-->
+        <!--android:targetClass="com.akexorcist.sleepingforless.view.settings.OpenSourceLicensesActivity"-->
+        <!--android:targetPackage="com.akexorcist.sleepingforless" />-->
 
         <!--</com.jenzz.materialpreference.Preference>-->
 
